--- a/learn-nextjs14/package.json
+++ b/learn-nextjs14/package.json
@@ -17,5 +17,9 @@
     "@types/node": "20.11.16",
     "@types/react": "18.2.53",
     "typescript": "5.3.3"
+  },
+  "volta": {
+    "node": "20.11.0",
+    "npm": "10.4.0"
   }
 }
