--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.19.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2"
   }
 }
