--- a/api/package.json
+++ b/api/package.json
@@ -14,5 +14,8 @@
     "@prisma/client": "^5.19.0",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.19.0"
   }
 }
