--- a/threads_clone_challenge/pubspec.yaml
+++ b/threads_clone_challenge/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   faker: ^2.2.0
   font_awesome_flutter: ^10.8.0
   flutter_svg: ^2.0.17
+  flutter_riverpod: ^2.6.1
+  shared_preferences: ^2.5.2
+  firebase_auth: ^5.4.2
+  cloud_firestore: ^5.6.3
+  firebase_storage: ^12.4.2
+  go_router: ^14.8.0
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/thread.svg
+    - assets/users.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
